XO_Project_UAT/Project--XOGrp--UAT/src/objects/Room__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Rooms</relationshipLabel>
        <relationshipName>Rooms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AdditionalFeeTotal__c</fullName>
        <label>Additional Fees Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CapacityMax__c</fullName>
        <label>Capacity Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CapacityMin__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Capacity Min</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <label>Capacity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CateringPriceOffMax__c</fullName>
        <label>Catering Price Off Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CateringPriceOffMin__c</fullName>
        <label>Catering Price Off Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CateringPriceOnMax__c</fullName>
        <label>Catering Price On Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CateringPriceOnMin__c</fullName>
        <label>Catering Price On Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CateringPrice__c</fullName>
        <label>Catering Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RentalPriceOffMax__c</fullName>
        <label>Rental Price Off Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RentalPriceOffMin__c</fullName>
        <label>Rental Price Off Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RentalPriceOnMax__c</fullName>
        <label>Rental Price On Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RentalPriceOnMin__c</fullName>
        <label>Rental Price On Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Setting__c</fullName>
        <inlineHelpText>The type of room</inlineHelpText>
        <label>Setting</label>
        <picklist>
            <picklistValues>
                <fullName>Backyard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ballroom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banquet Hall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brewery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Castle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Church</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City Hall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Country Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cruise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Farm + Ranch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Golf Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Historic Venue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Library</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lodge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mansion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mosque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mountain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Museum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Space</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Park</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Religious Setting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restaurant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Style_Notes__c</fullName>
        <label>Style Notes</label>
        <type>TextArea</type>
    </fields>
    <label>Room</label>
    <nameField>
        <label>Room Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rooms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>